# codex_master

./: Cargo.toml  PLANS.archive.md  PLANS.md
deploy/: Caddyfile.example  SERVICES.md
deploy/env/: home-client.env.example  relay.env.example
deploy/launchd/: com.codex.home-client.plist  com.codex.relay-server.plist
deploy/systemd/: codex-home-client.service  codex-relay.service
docs/: caddy-auth.md  remote-architecture.md
src/: config.rs  lib.rs  main.rs  protocol.rs  pwa_manifest.webmanifest  pwa_service_worker.js  relay_console.html  relay_login.html  relay_server.rs  relay_state.rs  runtime.rs  tls.rs  transport.rs  types.rs
src/relay_server/: auth.rs  browser_messages.rs  client_messages.rs  connections.rs  mod.rs  pages.rs  session_helpers.rs
