[package]
name = "codex_master"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = { version = "=0.9.4", features = ["unstable"] }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt", "io-util", "io-std", "process"] }
tokio-util = { version = "0.7", features = ["compat"] }
