[package]
name = "codex_master"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = { version = "=0.9.4", features = ["unstable"] }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-util", "io-std", "net", "process", "sync", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
